added the BulkInsertMode flag into the bulk insert API's

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -45,6 +45,7 @@
     </Compile>
     <Compile Include="AdvancedOptions.cs" />
     <Compile Include="AutoCreate.cs" />
+    <Compile Include="BulkInsertMode.cs" />
     <Compile Include="CompiledQueryExtensions.cs" />
     <Compile Include="ConnectionFactory.cs" />
     <Compile Include="DocumentStore.cs" />
