Support of private ID properties

--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -239,6 +239,7 @@
     <Compile Include="Services\NulloIdentityMapTests.cs" />
     <Compile Include="Services\TrackedEntityTests.cs" />
     <Compile Include="Session\document_session_find_json_async_Tests.cs" />
+    <Compile Include="Session\document_session_load_document.cs" />
     <Compile Include="Session\document_session_load_already_loaded_document_Tests.cs" />
     <Compile Include="Session\document_session_find_json_Tests.cs" />
     <Compile Include="Session\document_session_load_not_yet_persisted_document_Tests.cs" />
