--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Schema\IdField.cs" />
     <Compile Include="Schema\ActualIndex.cs" />
     <Compile Include="Schema\IDocumentSchemaObjects.cs" />
+    <Compile Include="Schema\IQueryableDocument.cs" />
     <Compile Include="Schema\QualifiedDatabaseName.cs" />
     <Compile Include="Schema\ColumnValue.cs" />
     <Compile Include="Schema\Identity\CombGuidIdGeneration.cs" />
