added support for compiled query pagination (stats) [GH353]

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -136,6 +136,8 @@
     <Compile Include="Linq\SelectorParser.cs" />
     <Compile Include="Linq\SelectTransformer.cs" />
     <Compile Include="Linq\SingleFieldSelector.cs" />
+    <Compile Include="Linq\StatsExpressionNode.cs" />
+    <Compile Include="Linq\StatsResultOperator.cs" />
     <Compile Include="Linq\StringSelector.cs" />
     <Compile Include="Linq\TargetObject.cs" />
     <Compile Include="Linq\ToJsonArrayExpressionNode.cs" />
