event versions are available immediately after persisting a unit of work. Closes GH-361

--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Bugs\Bug_261_double_take_or_skip.cs" />
     <Compile Include="Bugs\Bug_276_Query_by_abstract_type_in_hierarchy.cs" />
     <Compile Include="Bugs\Bug_336_completely_remove_crosses_schema_lines.cs" />
+    <Compile Include="Events\capturing_event_versions_on_existing_streams_after_append.cs" />
     <Compile Include="Events\end_to_end_event_capture_and_fetching_the_stream_with_rolling_buffer_Tests.cs" />
     <Compile Include="Events\EventStreamStorageTests.cs" />
     <Compile Include="Events\EventStreamTester.cs" />
