--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Events\EventStore.cs" />
     <Compile Include="Events\EventStoreAdmin.cs" />
     <Compile Include="Events\EventStream.cs" />
+    <Compile Include="Events\EventStreamVersioningCallback.cs" />
     <Compile Include="Events\IEventStoreConfiguration.cs" />
     <Compile Include="Events\IProjections.cs" />
     <Compile Include="Events\Projections\AggregationProjection.cs" />
