--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -146,6 +146,7 @@
     <Compile Include="Linq\WhereClauseVisitor.cs" />
     <Compile Include="Linq\WholeDocumentSelector.cs" />
     <Compile Include="QuerySession.cs" />
+    <Compile Include="Schema\Arguments\CurrentVersionArgument.cs" />
     <Compile Include="Schema\BulkLoading\BulkLoader.cs" />
     <Compile Include="Schema\DbObjects.cs" />
     <Compile Include="Schema\Arguments\DocJsonBodyArgument.cs" />
