--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Bugs\Bug_261_double_take_or_skip.cs" />
     <Compile Include="Bugs\Bug_276_Query_by_abstract_type_in_hierarchy.cs" />
     <Compile Include="Bugs\Bug_336_completely_remove_crosses_schema_lines.cs" />
+    <Compile Include="Bugs\Bug_xxx_problem_with_identity_map.cs" />
     <Compile Include="Bugs\Bug_382_bulk_insert_that_causes_multiple_batches.cs" />
     <Compile Include="Events\capturing_event_versions_on_existing_streams_after_append.cs" />
     <Compile Include="Events\end_to_end_event_capture_and_fetching_the_stream_with_rolling_buffer_Tests.cs" />
