--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -283,6 +283,8 @@
     <Compile Include="Services\VersionTracker.cs" />
     <Compile Include="StoreOptions.cs" />
     <Compile Include="QueryableExtensions.cs" />
+    <Compile Include="Transforms\ITransforms.cs" />
+    <Compile Include="Transforms\TransformFunction.cs" />
     <Compile Include="Util\EnumerableExtensions.cs" />
     <Compile Include="Util\LambdaBuilder.cs" />
     <Compile Include="Util\SerializerExtensions.cs" />
