--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Schema\IDocumentSchemaObjects.cs" />
     <Compile Include="Schema\IInitialData.cs" />
     <Compile Include="Schema\IQueryableDocument.cs" />
+    <Compile Include="Schema\ISchemaObjects.cs" />
     <Compile Include="Schema\QualifiedDatabaseName.cs" />
     <Compile Include="Schema\ColumnValue.cs" />
     <Compile Include="Schema\Identity\CombGuidIdGeneration.cs" />
