--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -72,8 +72,8 @@
     <Compile Include="Events\Projections\OneForOneProjection.cs" />
     <Compile Include="Events\Projections\AggregateFinder.cs" />
     <Compile Include="Events\SingleEventQueryHandler.cs" />
+    <Compile Include="Events\StreamState.cs" />
     <Compile Include="Events\StreamStateHandler.cs" />
-    <Compile Include="Events\Transforms.cs" />
     <Compile Include="Generation\TableDiff.cs" />
     <Compile Include="IDiagnostics.cs" />
     <Compile Include="IDocumentSessionListener.cs" />
