--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -288,7 +288,9 @@
     <Compile Include="Transforms\DocumentTransforms.cs" />
     <Compile Include="Transforms\IDocumentTransforms.cs" />
     <Compile Include="Transforms\ITransforms.cs" />
+    <Compile Include="Transforms\TransformExtensions.cs" />
     <Compile Include="Transforms\TransformFunction.cs" />
+    <Compile Include="Transforms\TransformToJsonSelector.cs" />
     <Compile Include="Util\EnumerableExtensions.cs" />
     <Compile Include="Util\LambdaBuilder.cs" />
     <Compile Include="Util\SerializerExtensions.cs" />
