spiking out more of patching

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -328,6 +328,11 @@
   <ItemGroup>
     <EmbeddedResource Include="Schema\SchemaObjects.sql" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="..\..\javascript\mt_patching.js">
+      <Link>Schema\SQL\mt_patching.js</Link>
+    </EmbeddedResource>
+  </ItemGroup>
   <Choose>
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And ($(TargetFrameworkVersion) == 'v4.5' Or $(TargetFrameworkVersion) == 'v4.5.1' Or $(TargetFrameworkVersion) == 'v4.5.2' Or $(TargetFrameworkVersion) == 'v4.5.3' Or $(TargetFrameworkVersion) == 'v4.6' Or $(TargetFrameworkVersion) == 'v4.6.1' Or $(TargetFrameworkVersion) == 'v4.6.2')">
       <ItemGroup>
