--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Linq\query_with_enums_Tests.cs" />
     <Compile Include="Linq\query_with_nested_boolean_logic_Tests.cs" />
     <Compile Include="Linq\query_with_nullable_types_Tests.cs" />
+    <Compile Include="Patching\can_build_the_patching_function.cs" />
     <Compile Include="Schema\BulkLoaderConstructionTests.cs" />
     <Compile Include="Schema\creating_a_full_patch.cs" />
     <Compile Include="Schema\DbObjectsTests.cs" />
