separated out more of the patching classes, fixed UT's affected by patch_doc.sql being written out

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -145,8 +145,9 @@
     <Compile Include="Linq\ToJsonArrayResultOperator.cs" />
     <Compile Include="Linq\WhereClauseVisitor.cs" />
     <Compile Include="Linq\WholeDocumentSelector.cs" />
-    <Compile Include="Patching\PatchClasses.cs" />
+    <Compile Include="Patching\IPatchExpression.cs" />
     <Compile Include="Patching\PatchExpression.cs" />
+    <Compile Include="Patching\PatchOperation.cs" />
     <Compile Include="QuerySession.cs" />
     <Compile Include="Schema\Arguments\CurrentVersionArgument.cs" />
     <Compile Include="Schema\BulkLoading\BulkLoader.cs" />
